# mpai-audio-analyser

./: CITATION.cff  Dockerfile  Makefile  README.md  pyproject.toml
docs/: Makefile
docs/source/: conf.py  index.rst  references.bib
docs/source/_static/latex/: preamble.tex  titlepage.tex
docs/source/_templates/: module.rst  plot_template.rst
docs/source/pyplots/: berio_distribution_histogram.py  classification_25_pretto.py  classification_25_pretto_berio_nono.py  classification_all.py  clusters_distribution.py  features_space.py  pretto_distribution_matrix.py
docs/source/sections/: audio.rst  audio_analyser.rst  bibliography.rst  conclusion.rst  glossary.rst  mpai.rst  usage.rst
docs/source/sections/api/: audiohandler.rst  index.rst  ml.rst
examples/gallery/: README.rst  data_extraction.py  plot_data_visualization.py  plot_equalization_classification.py  plot_equalization_clustering.py
examples/usage/: audio_synth.py  load_wav.py  plot_waveform.py
notebooks/: data_extraction.ipynb  data_visualization.ipynb  equalization_classification.ipynb  equalization_clustering.ipynb
scripts/: docker-noise-extractor.py
src/audiohandler/: __init__.py  data_structures.py
src/cli/: _data_structures.py  app.py  files.py
src/cli/noise_classifier/: __init__.py  app.py  classifier.py
src/cli/noise_extractor/: __init__.py  app.py  extractor.py
src/ml/: __init__.py  clusters.py  visualization.py
src/ml/classification/: __init__.py  _classification.py  _constants.py  _data_structures.py
src/ml/datasets/: __init__.py  _loaders.py
tests/audiohandler/: test_data_structures.py  test_utils.py
tests/cli/: test_cli.py  test_data_structures.py  test_extractor.py  test_files.py  test_time.py
tests/ml/: test_clusters.py  test_dataset.py  test_visualization.py
tests/test_sound/: test.json
(+12 files in other folders)
