[tool.poetry]
name = "audiohandler"
version = "0.3.8a"
description = "A audio handling library"
authors = ["Matteo <matteo.spanio97@gmail.com>"]
readme = "README.md"
keywords = ["audio", "sound", "music", "dsp", "signal processing"]

[tool.poetry.scripts]
noise-extractor = 'cli.noise_extractor.app:run'
noise-classifier = 'cli.noise_classifier.app:run'
audio-analyser = 'cli.app:run'

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
matplotlib = "^3.6.3"
scikit-learn = "^1.2.0"
seaborn = "^0.12.2"
llvmlite = "^0.39.1"
numpy = "1.23.3"
librosa = "^0.9.2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"
yapf = "^0.32.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
toml = "^0.10.2"
pytest-xdist = "^3.1.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.2"
sphinxcontrib-bibtex = "^2.5.0"
furo = "^2022.12.7"
setuptools = "^66.1.1"
sphinx-copybutton = "^0.5.1"
sphinx-autobuild = "^2021.3.14"
sphinx-gallery = "^0.11.1"
memory-profiler = "^0.61.0"

[tool.poetry.group.notebooks.dependencies]
jupyter = "^1.0.0"
ipywidgets = "^8.0.4"
widgetsnbextension = "^4.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -n auto -W error::RuntimeWarning"
testpaths = ["tests"]

[tool.coverage.run]
relative_files = true

[tool.yapf]
blank_line_before_nested_class_or_def = true
column_limit = 80

[tool.pylint]
max-line-length = 80
disable = [
    "C0103",  # Invalid name
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function or method docstring
    "C0301",  # Line too long
    "W0102",  # Dangerous default value
    "E1101",  # Module has no member
]
